--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2454,4 +2454,10 @@ table.form-layout > tbody > tr > td > select
 {
 	border:				1px solid #4572E7;
 }
-
+table.form-layout > tbody > tr > td > ul
+{
+	list-style-type:	none;
+	margin:				0;
+	padding:			0;
+	text-align:			left;
+}
