fixed a styling bug

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2133,7 +2133,7 @@ div.reflex-slider-rail-label
 	position	: absolute;
 	top			: -1.5em;
 	
-	border				: 0.1em solid BF6A17;
+	border				: 0.1em solid #BF6A17;
 	background-color	: #fff;
 }
 
