Added riches new reflex_template to the account create page

--- a/html/admin/css/reflex.css
+++ b/html/admin/css/reflex.css
@@ -260,7 +260,7 @@ div.GroupedContent {
 	border: .1em solid #D1D1D1;
 }
 
-div.GroupedErrorContent
+div.account-create-errors
 {
 	clear				: both;
 	position			: relative;
