--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2589,7 +2589,8 @@ ol.reset > li
 	list-style-type	: none;	
 }
 
-ul.horizontal
+ul.horizontal > li,
+ol.horizontal > li
 {
 	display	: inline-block;
 }
