last for week, started recurring charge type management page

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2818,3 +2818,16 @@ div.charge-type-table colgroup > col:last-child
 
 /************************ END - Popup Charge Type Add/Edit - END ************************/
 
+/************************ START - Recurring Charge Type Manage - START ************************/
+
+/* ... */
+
+/************************ END - Recurring Charge Type Manage - END ************************/
+
+/************************ START - Popup Recurring Charge Type Add/Edit - START ************************/
+
+/* ... */
+
+/************************ END - Popup Recurring Charge Type Add/Edit - END ************************/
+
+
