--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2871,7 +2871,8 @@ div.datareport-buttons > button > img
 /************************ START - Change Payment Method - START ************************/
 div.payment-methods
 {
-	padding				: 20px 0 20px 0
+	padding-top				: 20px;
+	padding-bottom			: 20px;
 }
 
 tr.account-payment-methods-titles > td
