--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2898,15 +2898,10 @@ td.account-payment-methods-col-bank-accounts
 }
 
 
-table.account-payment-methods
+ul.account-payment-method > li
 {
-}
-table.account-payment-methods > tr > td,
-table.account-payment-methods > tr > td > table > tr > td
-{
-	font-size			: 0.8em;
-	padding-left		: 0;
-	padding-right		: 0;
+	vertical-align		: top;
+	padding-left		: 5px;
 }
 
 /************************ END - Change Payment Method - END ************************/
