Work done on the new version of the data reports page, it now lists & runs the reports.

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -2875,6 +2875,11 @@ div.datareport th
 	width	: 30%;
 }
 
+td.datareport-name
+{
+	width	: 25%;
+}
+
 /************************ END - DataReport list - END ************************/
 
 
